Begin porting to 1.21.3
Begin porting to 1.21.3.

No runtime testing yet. It just compiles.