@@ -1,6 +1,7 @@
 package tech.anonymoushacker1279.immersiveweapons.data.recipes;
 
 import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.item.crafting.Recipe;
 import tech.anonymoushacker1279.immersiveweapons.item.crafting.SmallPartsRecipe;
@@ -11,22 +12,22 @@ import java.util.Objects;
 public class SmallPartsRecipeBuilder extends IWRecipeBuilder {
 
 	private final Ingredient material;
-	private final List<Item> craftables;
+	private final List<ItemStack> craftables;
 	private final SmallPartsRecipe.Factory<?> factory;
 
-	public SmallPartsRecipeBuilder(SmallPartsRecipe.Factory<?> factory, Ingredient material, List<Item> craftables) {
+	public SmallPartsRecipeBuilder(SmallPartsRecipe.Factory<?> factory, Ingredient material, List<ItemStack> craftables) {
 		this.material = material;
 		this.craftables = craftables;
 		this.factory = factory;
 	}
 
 	public static SmallPartsRecipeBuilder tinker(Ingredient material, List<Item> craftables) {
-		return new SmallPartsRecipeBuilder(SmallPartsRecipe::new, material, craftables);
+		return new SmallPartsRecipeBuilder(SmallPartsRecipe::new, material, craftables.stream().map(ItemStack::new).toList());
 	}
 
 	@Override
 	public Item getResult() {
-		return craftables.get(0);
+		return craftables.getFirst().getItem();
 	}
 
 	@Override
